(library
  (public_name pyml)
  (modules numpy py pyops pycaml pyml_arch pytypes pywrappers pyutils)
  (c_names numpy_stubs pyml_stubs)
  (wrapped false)
  (libraries bigarray stdcompat))

(executables
  (names generate)
  (modules generate)
  (libraries stdcompat))

(rule
  (targets pywrappers.ml pyml.h pyml_dlsyms.inc pyml_wrappers.inc)
  (deps (:gen generate.exe))
  (action (run %{gen})))

(rule
  (targets pyml_arch.ml)
  (deps (:pyml_arch pyml_arch_%{ocaml-config:system}.ml))
  (action (copy %{pyml_arch} pyml_arch.ml)))

(rule
  (targets pyml_arch_linux.ml)
  (deps pyml_arch_unix.ml)
  (action (copy pyml_arch_unix.ml pyml_arch_linux.ml)))

(rule
  (targets pyml_arch_elf.ml)
  (deps pyml_arch_unix.ml)
  (action (copy pyml_arch_unix.ml pyml_arch_elf.ml)))

(rule
  (targets pyml_arch_linux_elf.ml)
  (deps pyml_arch_unix.ml)
  (action (copy pyml_arch_unix.ml pyml_arch_linux_elf.ml)))

(rule
  (targets pyml_arch_linux_eabihf.ml)
  (deps pyml_arch_unix.ml)
  (action (copy pyml_arch_unix.ml pyml_arch_linux_eabihf.ml)))

(rule
  (targets pyml_arch_macosx.ml)
  (deps pyml_arch_darwin.ml)
  (action (copy pyml_arch_darwin.ml pyml_arch_macosx.ml)))

(library
  (name pyml_tests_common)
  (modules pyml_tests_common)
  (libraries pyml stdcompat))

(test
  (name numpy_tests)
  (modules numpy_tests)
  (libraries pyml pyml_tests_common stdcompat))

(test
  (name pyml_tests)
  (modules pyml_tests)
  (libraries pyml pyml_tests_common stdcompat))
