opam-version: "2.0"
maintainer: "Thierry Martinez <martinez@nsup.org>"
authors: "Thierry Martinez <martinez@nsup.org>"
homepage: "http://github.com/thierry-martinez/pyml"
bug-reports: "http://github.com/thierry-martinez/pyml/issues"
license: "BSD"
dev-repo: "git+https://github.com/thierry-martinez/pyml.git"
build: [make "all" "pymltop" "pymlutop" {utop:installed} "PREFIX=%{prefix}%"]
install: [make "install" "PREFIX=%{prefix}%"]
synopsis: "OCaml bindings for Python"
description: "OCaml bindings for Python 2 and Python 3"
depends: [
  "ocaml" {>= "3.12.1" & < "4.11.0"}
  "ocamlfind" {build}
  "stdcompat" {>= "9"}
]
depopts: ["utop"]
