opam-version: "2.0"
maintainer: "Thierry Martinez <martinez@nsup.org>"
authors: "Thierry Martinez <martinez@nsup.org>"
homepage: "http://github.com/thierry-martinez/pyml"
bug-reports: "http://github.com/thierry-martinez/pyml/issues"
license: "BSD-2-Clause"
dev-repo: "git+https://github.com/thierry-martinez/pyml.git"
build: ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} "@doc" {with-doc}]
synopsis: "OCaml bindings for Python"
description: "OCaml bindings for Python 2 and Python 3"
depends: [
  "ocaml" {>= "3.12.1"}
  "dune" {"2.8.0"}
  "ocamlfind" {build}
  "stdcompat" {>= "17"}
  "conf-python-3-dev" {with-test}
]
depopts: ["utop"]
version: "20210924"
